gnovm/cmd/gno/testdata/gno_transpile/08_build_flag_with_parse_error.txtar
# Run gno transpile with -gobuild flag on file with parse error

! gno transpile -gobuild .

! stdout .+
stderr '^main.gno:3:1: expected declaration, found invalid$'

# no *.gen.go files are created
! exec test -f main.gno.gen.go

-- main.gno --
package main

invalid

func main() {
	var x = 1
}
